[tool.poetry]
name = "klojure"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory", "Lawnseol"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
topggpy = "^1.4.0"
koreanbots = "2.1.0"
requests = "2.28.1"
pysqlite3-binary = "0.5.0"
disnake = "2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
